# docker-template

./: .devcontainer.json  Dockerfile  Makefile  README.md  SPEC_README.md  cloudbuild.yaml  docker-compose-nvidia.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  server.py
.gemini/: GEMINI.md  SCRATCHPAD.md  SPEC.md  TASK.md
.gemini/commands/: deploy.toml  lint.toml  unittest.toml
.gemini/extensions/huge-spec/: SPEC_README.md  gemini-extension.json
.gemini/extensions/huge-spec/commands/: design.toml  implement.toml  ingest.toml  plan.toml  test.toml
.gemini/standards/: best-practices.md  code-style.md  tech-stack.md
devcontainer/: devcontainer.json
docker/: jupyter.Dockerfile  jupyterlab-lsp-settings.json  p10k.zsh
docker-extras/: nvidia.yaml
vscode/: settings.json
