[tool.poetry]
name = "docker-template"
version = "1.0.0"
description = "Docker Template with FastAPI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
debugpy = "~=1.8.13"
fastapi = "~=0.115.12"
httpx = "~=0.28.1"
python-dotenv = "~=1.1.0"
uvicorn = {extras = ["standard"], version = "~=0.34.0"}
websockets = "~=15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
