[tool.poetry]
name = "docker-template"
version = "1.0.0"
description = "Docker Template with FastAPI"
authors = ["Ryan Balch <ryan@balch.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
asyncio = "*"
debugpy = "*"
fastapi = "*"
httpx = "*"
python-dotenv = "*"
uvicorn = {extras = ["standard"], version = "*"}
websockets = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
